*SVN*

- engine_schema_info now respects the prefix/suffixes set for 
  ActiveRecord::Base (Ticket #67)
- added ActiveRecord::Base.wrapped_table_name(name) method to assist
  in determining the correct table name

-----
1.0.6

- Added ability to determine version information for engines: rake engine_info
- Added a custom logger for the Engines module, to stop pollution of the Rails
  logs.
- Added some more tests (in particular, see rails_engines/applications/engines_test).
- Another attempt at solving Ticket #53 - controllers and helpers should now
  be loadable from modules, and if a full path (including 
  RAILS_ROOT/ENGINES_ROOT) is given, it should be safely stripped from the 
  require filename such that corresponding files can be located in any active
  engines. In other words, controller/helper overloading should now completely
  work, even if the controllers/helpers are in modules.
- Added (finally) patch from Ticket #22 - ActionMailer helpers should now load
- Removed support for Engines.start :engine, :engine_name => 'whatever'. It
  was pointless.
- Fixed engine name referencing; engine_stylesheet/engine_javascript can now
  happily use shorthand engine names (i.e. :test == :test_engine) (Ticket #45)
- Fixed minor documentation error ('Engine.start' ==> 'Engines.start')
  (Ticket #57)
- Fixed double inclusion of RAILS_ROOT in engine_migrate rake task 
  (Ticket #61)
- Added ability to force config values even if given as a hash (Ticket #62)


-----
1.0.5

- Fixed bug stopping fixtures from loading with PostgreSQL


-----
1.0.4

- Another attempt at loading controllers within modules (Ticket #56)


-----
1.0.3

- Fixed serious dependency bug stopping controllers being loaded (Ticket #56)


-----
1.0.2

- Fixed bug with overloading controllers in modules from /app directory
- Fixed exception thrown when public files couldn't be created; exception is now logged (Ticket #52)